--- a/index.html
+++ b/index.html
@@ -42,16 +42,20 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/photo circle.jpg" alt="Jishnu Nandakumar profile picture" />
+        <img src="/assets/photo circle.jpg" alt="Jishnu Nandakumar profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Jishnu Nandakumar</h1>
         <p class="section__text__p2">AI and ML Enthusiast</p>
+        <p class="section__text__p2">Register Number: RA2311026010516</p>
+        <p class="section__text__p2">Mail ID: jn7661@srmist.edu.in</p>
+        <p class="section__text__p2">Department: CINTEL</p>
+        <p class="section__text__p2">Year / Sem / Section: II year / 3rd Sem / AJ-1</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Jishnu_Nandakumar_Resume.pdf')"
+            onclick="window.open('/assets/Jishnu_Nandakumar_Resume.pdf')"
           >
             Download CV
           </button>
@@ -61,13 +65,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="/assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/jishnu-khumar/'"
           />
           <img
-            src="./assets/github.png"
+            src="/assets/github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/N-Jishnu'"
@@ -81,7 +85,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/arrow1.png "
+            src="/assets/arrow1.png "
             alt="Profile picture"
             class="about-pic"
           />
@@ -90,7 +94,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="/assets/experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -99,7 +103,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="/assets/education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -110,13 +114,13 @@
           <div class="text-container">
             <p>
               
-I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a 9.2 CGPA. Some of my interests are AI , Programming, creative arts, sports and , technology. I excel in time management, communication, teamwork, problem-solving, patience, and curiosity, with a strong focus on adaptability.I speak English,Hindi,Marathi and Malayalam.
+I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a 9.2 CGPA. Some of my interests are AI , Programming, creative arts, sports and , technology. I excel in time management, communication, teamwork, problem-solving, patience, and curiosity, with a strong focus on adaptability.I speak English,Hindi,Marathi and Malayalam.
             </p>
           </div>
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="/assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -132,7 +136,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="/assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -143,7 +147,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="/assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -154,7 +158,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="/assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -165,7 +169,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="/assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -176,7 +180,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="/assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -187,7 +191,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="/assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -203,7 +207,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="/assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -214,7 +218,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="/assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -225,7 +229,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="/assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -236,7 +240,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="/assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -250,7 +254,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="/assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#certificates'"
@@ -264,7 +268,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Cherry+ Merit of Certificate-1.png"
+                src="/assets/Cherry+ Merit of Certificate-1.png"
                 alt="Certificate 1"
                 class="project-img"
               />
@@ -276,7 +280,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Hackathon.png"
+                src="/assets/Hackathon.png"
                 alt="Certificate 2"
                 class="project-img"
               />
@@ -288,7 +292,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/ideathon.png"
+                src="/assets/ideathon.png"
                 alt="Certificate 3"
                 class="project-img"
               />
@@ -300,7 +304,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="/assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#elab'"
@@ -314,7 +318,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/elab.png"  
+                src="/assets/elab.png"  
                 alt="E-Lab Progress"
                 class="project-img"
               />
@@ -325,7 +329,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="/assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -339,7 +343,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Face detect.png"
+                src="/assets/Face detect.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -358,7 +362,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Fighter jet.png"
+                src="/assets/Fighter jet.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -377,7 +381,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/colour.png"
+                src="/assets/colour.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -396,7 +400,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="/assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -408,7 +412,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./assets/email.png"
+            src="/assets/email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -416,7 +420,7 @@ I'm Jishnu Nanakumer, a second-year B.Tech AIML student at SRM University with a
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin.png"
+            src="/assets/linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
