--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="/assets/photo circle.jpg" alt="Jishnu Nandakumar profile picture" />
+        <img src="assets/photo circle.jpg" alt="Jishnu Nandakumar profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -65,13 +65,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="/assets/linkedin.png"
+            src="assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/jishnu-khumar/'"
           />
           <img
-            src="/assets/github.png"
+            src="assets/github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/N-Jishnu'"
@@ -85,7 +85,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="/assets/arrow1.png "
+            src="assets/arrow1.png "
             alt="Profile picture"
             class="about-pic"
           />
@@ -94,7 +94,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="/assets/experience.png"
+                src="assets/experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -103,7 +103,7 @@
             </div>
             <div class="details-container">
               <img
-                src="/assets/education.png"
+                src="assets/education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -120,7 +120,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
         </div>
       </div>
       <img
-        src="/assets/arrow.png"
+        src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -136,7 +136,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
             <div class="article-container">
               <article>
                 <img
-                  src="/assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -147,7 +147,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="/assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -158,7 +158,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="/assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -169,7 +169,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="/assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -180,7 +180,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="/assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -191,7 +191,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="/assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -207,7 +207,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
             <div class="article-container">
               <article>
                 <img
-                  src="/assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -218,7 +218,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="/assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -229,7 +229,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="/assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -240,7 +240,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
               </article>
               <article>
                 <img
-                  src="/assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -254,7 +254,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
         </div>
       </div>
       <img
-        src="/assets/arrow.png"
+        src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#certificates'"
@@ -268,7 +268,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assets/Cherry+ Merit of Certificate-1.png"
+                src="assets/Cherry+ Merit of Certificate-1.png"
                 alt="Certificate 1"
                 class="project-img"
               />
@@ -280,7 +280,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assets/Hackathon.png"
+                src="assets/Hackathon.png"
                 alt="Certificate 2"
                 class="project-img"
               />
@@ -292,7 +292,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assets/ideathon.png"
+                src="assets/ideathon.png"
                 alt="Certificate 3"
                 class="project-img"
               />
@@ -304,7 +304,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
         </div>
       </div>
       <img
-        src="/assets/arrow.png"
+        src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#elab'"
@@ -318,7 +318,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assets/elab.png"  
+                src="assets/elab.png"  
                 alt="E-Lab Progress"
                 class="project-img"
               />
@@ -329,7 +329,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
         </div>
       </div>
       <img
-        src="/assets/arrow.png"
+        src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -343,7 +343,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assets/Face detect.png"
+                src="assets/Face detect.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -362,7 +362,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assets/Fighter jet.png"
+                src="assets/Fighter jet.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -381,7 +381,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="/assets/colour.png"
+                src="assets/colour.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -400,7 +400,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
         </div>
       </div>
       <img
-        src="/assets/arrow.png"
+        src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -412,7 +412,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="/assets/email.png"
+            src="assets/email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -420,7 +420,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
         </div>
         <div class="contact-info-container">
           <img
-            src="/assets/linkedin.png"
+            src="assets/linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
