--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
+          <li><a href="#coding-competitions">Competitions</a></li>
           <li><a href="#certificates">Certificates</a></li>
           <li><a href="#elab">E-Lab</a></li>
           <li><a href="#projects">Projects</a></li>
@@ -33,6 +34,7 @@
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#coding-competitions" onclick="toggleMenu()">Competitions</a></li>
           <li><a href="#certificates" onclick="toggleMenu()">Certificates</a></li>
           <li><a href="#elab" onclick="toggleMenu()">E-Lab</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
@@ -257,6 +259,44 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
         src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
+        onclick="location.href='./#coding-competitions'"
+      />
+    </section>
+    <section id="coding-competitions">
+      <p class="section__text__p1">Check Out My</p>
+      <h1 class="title">Coding Competitions</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="assets/realjishnu (2).png"
+                alt="Competitive Programming Stats"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">CodeChef</h2>
+            <div class="btn-container">
+                          </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="assets/Hackerrrank.png"
+                alt="Hackathons and Contests"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">HackerRank</h2>
+            <div class="btn-container">
+                          </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
         onclick="location.href='./#certificates'"
       />
     </section>
@@ -434,6 +474,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
+            <li><a href="#coding-competitions">Competitions</a></li>
             <li><a href="#certificates">Certificates</a></li>
             <li><a href="#elab">E-Lab</a></li>
             <li><a href="#projects">Projects</a></li>
