--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Jishnu Nandakumar</h1>
         <p class="section__text__p2">AI and ML Enthusiast</p>
-        <p class="section__text__p2">Register Number: RA2311026010516</p>
-        <p class="section__text__p2">Mail ID: jn7661@srmist.edu.in</p>
-        <p class="section__text__p2">Department: CINTEL</p>
-        <p class="section__text__p2">Year / Sem / Section: II year / 3rd Sem / AJ-1</p>
+        <p class="section__text__p2">Mail ID: jishnudevelopment@gmail.com</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
