--- a/index.html
+++ b/index.html
@@ -347,31 +347,6 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
         onclick="location.href='./#elab'"
       />
     </section>
-    <section id="elab">
-      <p class="section__text__p1">Check Out My</p>
-      <h1 class="title">E-Lab Progress</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="assets/elab.png"  
-                alt="E-Lab Progress"
-                class="project-img"
-              />
-            </div>
-            <div class="btn-container">
-                          </div>
-          </div>
-        </div>
-      </div>
-      <img
-        src="assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#projects'"
-      />
-    </section>
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
@@ -453,7 +428,7 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">jishnudevelopment@gmail.com</a></p>
+          <p><a href="mailto:examplemail@gmail.com">jishnu.khumar@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
