--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Jishnu Nandakumar</h1>
-        <p class="section__text__p2">AI and ML Enthusiast</p>
-        <p class="section__text__p2">Mail ID: jishnudevelopment@gmail.com</p>
+        <p class="section__text__p2">AI and ML Student</p>
+        <p class="section__text__p2">Mail ID: jishnu.khumar@gmail.com</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -98,7 +98,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />AI and ML Development</p>
+              <p>1+ years <br />AI and ML Development</p>
             </div>
             <div class="details-container">
               <img
@@ -113,7 +113,7 @@
           <div class="text-container">
             <p>
               
-I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a 9.2 CGPA. Some of my interests are AI , Programming, creative arts, sports and , technology. I excel in time management, communication, teamwork, problem-solving, patience, and curiosity, with a strong focus on adaptability.I speak English,Hindi,Marathi and Malayalam.
+I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a 9.3 CGPA. Some of my interests are AI , Programming, creative arts, sports and , technology. I excel in time management, communication, teamwork, problem-solving, patience, and curiosity, with a strong focus on adaptability.I speak English,Hindi,Marathi and Malayalam.
             </p>
           </div>
         </div>
