--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
           <span></span>
           <span></span>
         </div>
-        <div class="menu-links">
+        <ul class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
           <li><a href="#coding-competitions" onclick="toggleMenu()">Competitions</a></li>
           <li><a href="#certificates" onclick="toggleMenu()">Certificates</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-        </div>
+        </ul>
       </div>
     </nav>
     <section id="profile">
@@ -52,7 +52,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('assets/Jishnu_Nandakumar_Resume.pdf')"
+            onclick="window.open('assets/Jishnu_resume.pdf')"
           >
             Download CV
           </button>
@@ -315,29 +315,28 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/Hackathon.png"
+                src="assets/ULTRON 8.0.jpg"
                 alt="Certificate 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">ACM Hackathon</h2>
+            <h2 class="experience-sub-title project-title">TOP 15/2000 Ultron8.0 Hackathon</h2>
             <div class="btn-container">
                           </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/ideathon.png"
+                src="assets/The complete c++ developer course.png"
                 alt="Certificate 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">IdeaNova</h2>
+            <h2 class="experience-sub-title project-title">The complete c++ developer course</h2>
             <div class="btn-container">
                           </div>
           </div>
         </div>
-      />
     </section>
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
@@ -353,6 +352,9 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
               />
             </div>
             <h2 class="experience-sub-title project-title">Face Detection and Tracking with Deep Learning</h2>
+            <p class="project-description">
+             Built a real-time face detection system using a VGG16-based CNN and custom bounding box regression with data augmentation, achieving robust live tracking using OpenCV.
+            </p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -372,6 +374,9 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
               />
             </div>
             <h2 class="experience-sub-title project-title">Fighter Jet Game in Java</h2>
+            <p class="project-description">
+              Created a 2D Java Swing-based fighter game featuring obstacle navigation and animated gameplay, with high-score persistence via SQLite integration
+            </p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -385,20 +390,22 @@ I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/colour.png"
+                src="assets/Gemini.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Real-Time Multiple Color Detection Using OpenCV</h2>
+            <h2 class="experience-sub-title project-title">Gemini Multimodal Playground</h2>
+            <p class="project-description">
+              Web app enabling real-time image + text interactions with Google’s Gemini Pro Vision model.
+            </p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/N-Jishnu/Primary-Color-Detection-using-CV2'"
+                onclick="location.href='https://github.com/satvikndxd/skynet'"
               >
                 Github
               </button>
-              
             </div>
           </div>
         </div>
