--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <div class="text-container">
             <p>
               
-I'm Jishnu Nanakumar, a second-year B.Tech AIML student at SRM University with a 9.3 CGPA. Some of my interests are AI , Programming, creative arts, sports and , technology. I excel in time management, communication, teamwork, problem-solving, patience, and curiosity, with a strong focus on adaptability.I speak English,Hindi,Marathi and Malayalam.
+I'm Jishnu Nanakumar, a third-year B.Tech AIML student at SRM University with a 9.3 CGPA. Some of my interests are AI , Programming, creative arts, sports and , technology. I excel in time management, communication, teamwork, problem-solving, patience, and curiosity, with a strong focus on adaptability.I speak English,Hindi,Marathi and Malayalam.
             </p>
           </div>
         </div>
