--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ I'm Jishnu Nanakumar, a third-year B.Tech AIML student at SRM University with a 
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/Cherry+ Merit of Certificate-1.png"
+                src="assets/Cherry+ Merit of Certificate-1.jpg"
                 alt="Certificate 1"
                 class="project-img"
               />
@@ -327,7 +327,7 @@ I'm Jishnu Nanakumar, a third-year B.Tech AIML student at SRM University with a 
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="assets/The complete c++ developer course.png"
+                src="assets/The complete c++ developer course.jpg"
                 alt="Certificate 3"
                 class="project-img"
               />
